--- a/tracy-client/Cargo.toml
+++ b/tracy-client/Cargo.toml
@@ -34,6 +34,7 @@ criterion = "0.5"
 [dependencies]
 once_cell = "1.19"
 rustc-demangle = { version = "0.1", optional = true }
+cpp_demangle = { version = "0.5", optional = true }
 
 [dependencies.sys]
 path = "../tracy-client-sys"
@@ -63,7 +64,7 @@ callstack-inlines = ["sys/callstack-inlines"]
 manual-lifetime = ["sys/manual-lifetime"]
 delayed-init = ["sys/delayed-init"]
 flush-on-exit = ["sys/flush-on-exit"]
-demangle = ["sys/demangle", "dep:rustc-demangle"]
+demangle = ["sys/demangle", "dep:rustc-demangle", "dep:cpp_demangle"]
 verify = ["sys/verify"]
 debuginfod = ["sys/debuginfod"]
 crash-handler = ["sys/crash-handler"]
